# HEPIA-Projects

./: README.md
Algo-1st-year/: Makefile  README.md
Algo-1st-year/Morse/: code-morse.txt  texte.morse.txt
Algo-1st-year/Quentin/: anagram  anagramme.c  chess
Algo-1st-year/Thomas/: chess_queen.c
Algo-1st-year/cours_01_15/: Makefile  heapsort.c  heapsort.h  main.c  run
Algo-1st-year/cours_10_09/: README.txt
Algo-2nd-year/Motifs/: README.txt  automata.ts  bm.ts  expected_array.txt  expected_data.txt  index.ts  kpm.ts  package-lock.json  package.json  rk.ts  rkText.txt  text.txt
Algo-2nd-year/Reed-Muller/: Bruitage.java  Main.java  PGM.java  README.txt  ReedMuller.java  lena_128x128_64.pgm  mars-crat.enc.alt_0.07  mars-crat.enc.alt_0.10
Bachelor/rapport-projet-bachelor/: config.yaml  run.sh
Bachelor/tut-tut-les-bus/: .gitignore  Cargo.toml  README.md
Cloud/FaaS/: Graph Results.jmx  (+1 more)
Geom-3D/: readme.md
Objets-Communicants/: README.md
Projet-Orientation/: README.md
Projet-Web/: README.md
SLO/: ALU.circ  Projet.circ  RAM_synch.circ  instructions.lsn  instructions_commentees.lsn
SQL/: README.md  docker-compose.yml
Scala/: build.sbt
Virt-Sys/: README.md
Visnum/labo1/: README.rst  pyproject.toml
Visnum/labo1/labo1/: hough.py
Visnum/labo1/tests/: test_labo1.py
Visnum/labo2/labo2/: README.rst  pyproject.toml
Visnum/labo2/labo2/labo2/: angle.txt  gamepad.py  wheel.py
Visnum/labo2/labo2/tests/: test_labo2.py
Visnum/labo3/labo3/: pyproject.toml
Visnum/labo3/labo3/backend/: back.py  kekas.h5  numbers.json
Visnum/labo3/labo3/frontend/: index.html  script.js  style.css
Visnum/labo3/labo3/labo3/: main.py
Visnum/labo3/labo3/tests/: test_labo3.py
kek/Bachelor/tut-tut-les-bus/src/gtfs/: Cargo.toml
kek/Bachelor/tut-tut-les-bus/src/gtfs/src/: agency.rs  calendar.rs  shapes.rs  stops.rs  trips.rs  validation.rs
scala/: README.md
(+1530 files in other folders)
