[tool.poetry]
name = "labo2"
version = "0.1.0"
description = ""
authors = ["thomas.dagierjo <thomas.dagier-joncour@etu.hesge.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.812"
PyQt5 = "^5.15.4"
opencv-python = "4.3.0.36"
dark = "^0.7.1"
matplotlib = "^3.4.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
