[tool.poetry]
name = "labo3"
version = "0.1.0"
description = ""
authors = ["thomas.dagierjo <thomas.dagier-joncour@etu.hesge.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64.0"
uvicorn = "^0.13.4"
mypy = "^0.812"
pydantic = "^1.8.1"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
